Fix project link button alignment

--- a/_sass/_projects.scss
+++ b/_sass/_projects.scss
@@ -2,6 +2,7 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
+  align-items: center;
   width: 90%;
   max-width: 960px;
   margin: 0 auto;
@@ -56,7 +57,7 @@
 }
 
 .project-link {
-  width: min-content;
+  width: fit-content;
   margin: 10px 0px;
   padding: 5px;
   color: $main;
